swagger e func;oes especiais
